# AStock-Agent-System

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: ff9dace0b390_initial_core_tables.py
app/: main.py
app/api/routes/: health.py
app/core/: config.py
app/db/: session.py
app/db/models/: daily_bar.py  position.py  review_daily.py  signal_event.py  stock.py
app/providers/mock/: mock_market_data.py
app/scripts/: seed_mock_data.py
astock_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_health.py  test_mock_provider.py
